Replace terminally deprecated classes